--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "core-js": "^3.8.3",
+    "multer": "^1.4.5-lts.1",
     "vue": "^3.3.0",
     "vue-loader": "^17.4.2",
     "vue-router": "^4.1.0",
@@ -22,9 +23,9 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^5.0.0",
-  "vue-loader": "^17.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-loader": "^17.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^4.0.0"
