--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "dependencies": {
     "axios": "^1.7.9",
     "core-js": "^3.8.3",
-    "vue": "^2.7.16",
-    "vue-router": "^3.5.0",
-    "vue-template-compiler": "^2.7.16"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^4.5.13",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "webpack": "^5.0.0",
